# galaxies

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
android/: Android.mk  AndroidManifest.xml  Application.mk  BUILD.txt
android/res/values/: ids.xml  strings.xml  values.xml
src/: GAndroid.c  GAndroid.h  GAudio.c  GAudio.h  GEvent.h  GGame.c  GGame.h  GGraphics.c  GGraphics.h  GIcons.h  GJustify.c  GJustify.h  GPrefs.c  GPrefs.h  GResources.h  GSolver.c  GSolver.h  GSprite.c  GSprite.h  GSpriteBoard.c  GSpriteBoard.h  GSpriteBoardGrid.c  GSpriteBoardGrid.h  GSpriteButton.c  GSpriteButton.h  GSpriteCore.c  GSpriteCore.h  GSpriteCredits.c  GSpriteCredits.h  GSpriteEditor.c  GSpriteEditor.h  GSpriteGalaxies.c  GSpriteGalaxies.h  GSpriteImage.c  GSpriteImage.h  GSpriteLabel.c  GSpriteLabel.h  GSpriteLevelSelect.c  GSpriteLevelSelect.h  GSpriteMainMenu.c  (+27 more)
win32/Galaxies/: Galaxies.vcxproj  Galaxies.vcxproj.filters  TentaiShow.sln
